--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,8 +9,7 @@
   <header>
     <h1>My Website Header</h1>
     <nav>
-      <a href="/">Home</a> |
-      <a href="/clients">Clients</a> |
+      <a class="active" href="/">HOME</a>
       <a href="/admin/logout">Logout</a>
     </nav>
   </header>
